crates/macro-tools/tests/ui/accessors/fail/reducer_option.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
struct Meta {
    #[accessor(reducer)]
    name: String,
}

fn main() {}
